# GameKata-CircusCharlie

./: CMakeLists.txt
cmake/: BuildGame.cmake  Common.cmake  TestGame.cmake
src/: config.cpp  config.cppm  config.h  main.cpp  main2.cpp  std.h
src/framework/game/: BaseGame.cpp  BaseGame.h  GameComponent.cpp  GameComponent.h  GameObject.cpp  GameObject.h
src/framework/services/: ControllerGameService.cpp  ControllerGameService.h  GameServiceContainer.cpp  GameServiceContainer.h  RenderService.cpp  RenderService.h  TextureService.cpp  TextureService.h
src/game/: game.cpp  game.cppm  game.h  game.ixx
src/game/configs/: Textures.h
src/game/objects/: Player.cpp  Player.h
src/game/services/: ControllerGameService.cpp  ControllerGameService.cppm  ControllerGameService.ixx  GameService.cppm  GameServiceContainer.cpp  GameServiceContainer.cppm  GameServiceContainer.ixx  IService.cppm  Index.cppm
test/: game_test.cpp  sdl_stub.cpp  test.cpp
